# chile-state-of-web-consent

./: .gitignore  CITATION.cff  LICENSE  README.md  companies.json  pyproject.toml
data/: companies_traffic.json  companies_traffic_new.json  known_cookies.csv
docs/talks/2026-88-gobierno/: cfp_abstract.es.md
results/: study.db
results/study_report/: INDEX.md  findings.json  summary.md
results/study_report/per_site/: 1.md  100.md  101.md  102.md  103.md  104.md  105.md  106.md  107.md  109.md  11.md  110.md  112.md  114.md  115.md  116.md  118.md  119.md  12.md  122.md  124.md  125.md  126.md  127.md  128.md  129.md  13.md  130.md  131.md  132.md  133.md  135.md  137.md  138.md  14.md  140.md  141.md  142.md  143.md  144.md  (+385 more)
results/study_report/segments/: gov.md  other.md
scripts/: build_audit_report.py  compute_agent_f1.py  dedup_traffic.py  label_server.py  study_report.py
